# sealed-test

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
derive/: Cargo.toml  README.md
derive/src/: attributes.rs  gen.rs  lib.rs
src/: lib.rs  prelude.rs
