[package]
name = "sealed_test"
version = "1.1.0"
edition = "2021"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/oknozor/sealed-test"
documentation = "https://docs.rs/sealed-test"
categories = ["development-tools", "filesystem"]
keywords = ["testing", "test"]
description = """
A procmacro attribute to run your test in an isolated environment
"""



[dependencies]
rusty-forkfork = "0.4.0"
tempfile = "^3"
fs_extra = "1.2.0"
sealed_test_derive = "1.1.0"

[dev-dependencies]
cmd_lib = "2.0.0"
